test/rbkt/Queries/zorba/syntax-error/syntax-error-08.xq
(: 
  Syntax error with an improved error message:
  unterminated comment
:)

(: Name: XQueryComment016 :)
(: Description: Invalid comment :)
(: insert-start :)
declare variable $input-context external;
(: insert-end :)
(:)
<empty/>
